# mana

./: Cargo.toml  adopt_tool.cue  config.lua  config.nims  config2.lua  leafs.ncl  mana.lua  mana.ncl  mana.nimble  manaprotocol.lua  nnn.lua  q_async.nim  q_outerr.nim  rpi4-home-pi.lua  rpi4-nas-noobs.lua  rpi4-sudo.lua  vimrc.cue  vimrc.lua  vimrc.txt  want.md  win-mana.ncl
.github/workflows/: cargo-build-and-test.yml
effectors/: Cargo.toml  posixdirs.lua  posixfiles.lua  posixfs.lua  systemctl.lua  winfs.lua  winhome.lua  winpath.lua
effectors/f-lua/: Cargo.toml  systemctl.lua  winfs.lua  winhome.lua  winpath.lua
effectors/f-lua/src/: lib.rs
effectors/f-scp/: Cargo.toml
effectors/f-scp/src/: lib.rs
effectors/f-ssh/: Cargo.toml
effectors/f-ssh/src/: lib.rs
effectors/f-zeroinstall/: Cargo.toml
effectors/f-zeroinstall/src/: lib.rs  xmlutil.rs
effectors/src/: lib.rs
handler/: posixdirs.lua  posixfs.lua  posixfs2.lua  winfs.lua  winhome.lua  winpath.lua  zeroinst.rs
lib/: mana.ncl
mana/: winfs.lua  winhome.lua  winpath.lua
nnn/: winfs.lua  winhome.lua  winpath.lua
old/: manaprotocol.lua  rpi4-home-pi.lua  want.md
old/src/: mana.nim
pre-merge/: Cargo.toml
pre-merge/src/: main.rs
script/: Cargo.toml
script/parse_ncl/: Cargo.toml
script/parse_ncl/src/: lib.rs
script/src/: lib.rs
src/: effectors.rs  exp-tmp.rs  handlers.rs  lib.rs  main.rs  mana.nim  manaprotocol.rs  repo.rs  script.rs  xmlutil.rs
src/handler/: mod.rs  winfeat.rs  zeroinst.rs  zeroinstall.rs
tests/: trun.nim
