[package]
name = "mana2"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
default-run = "mana"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mana"
path = "src/main.rs"

#[[bin]]
#name = "x"
#path = "src/exp-tmp.rs"

#[[bin]]
#name = "zeroinst"
#path = "handler/zeroinst.rs"

[workspace]
members = [
    "effectors",
    "effectors/f-ssh",
    "script",
]

[dependencies]
effectors = { path = "effectors" }
f-ssh = { path = "effectors/f-ssh" }
f-zeroinstall = { path = "effectors/f-zeroinstall" }
script = { path = "script" }
anyhow = "1.0.79"
cap-std = "3.0.0"
clap = { version = "4.4.18", features = ["derive", "env", "wrap_help"] }
env_logger = "0.11.5"
git2 = { version = "0.18.1", features = ["vendored-libgit2"], default-features = false }
itertools = "0.13"
log = "0.4.22"
mlua = { version = "0.9.4", features = ["lua54", "vendored"] }
path-slash = "0.2.1"
peg = "0.8.2"
thiserror = "1.0.56"
unicase = "2.7.0"
url = "2.5.0"

