[package]
name = "care"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
default-run = "care"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "care"
path = "src/main.rs"

#[[bin]]
#name = "x"
#path = "src/exp-tmp.rs"

[workspace]

[workspace.dependencies]
effectors = { path = "effectors", version = "0.2.0", package = "care-effectors" }
f-lua = { path = "effectors/f-lua", version = "0.2.0", package = "care-ef-lua" }
anyhow = "1.0.79"
cap-std = "3.0.0"
clap = "4.4.18"
env_logger = "0.11.5"
fn-error-context = "0.2.1"
git2 = { version = "0.19.0", default-features = false }
log = "0.4.22"
mlua = "0.9.4"
nickel-lang-core = { version = "0.8.0", default-features = false }
path-slash = "0.2.1"
peg = "0.8.2"
phf = "0.11.2"
remotefs = { version = "0.3.0", default-features = false }
remotefs-ssh = { version = "0.4.1", default-features = false }
tempfile = "3.9.0"
thiserror = "1.0.56"
toml = "0.8.8"
unicase = "2.7.0"
url = "2.5.0"
urlencoding = "2.1.3"
whoami = { version = "1.5.0", default-features = false }
xml-rs = "0.8.20"
yaserde = "0.10.0"
itertools = "0.13.0"

[dependencies]
effectors = { workspace = true }
f-lua = { workspace = true }
f-scp = { path = "effectors/f-scp" }
f-zeroinstall = { path = "effectors/f-zeroinstall" }
script = { path = "script" }
anyhow = { workspace = true }
cap-std = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
env_logger = { workspace = true }
fn-error-context = { workspace = true }
git2 = { workspace = true, features = ["vendored-libgit2"] }
itertools = { workspace = true }
log = { workspace = true }
path-slash = { workspace = true }
peg = { workspace = true }
thiserror = { workspace = true }
unicase = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
phf = { workspace = true, features = ["macros"] }

