[package]
name = "care-effectors"
version = "0.2.0"
edition = "2021"
description = "Common helper code for effectors for the care tool"
license = "AGPL-3.0-or-later"
repository = "https://github.com/akavel/mana"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
urlencoding = { workspace = true }
