[package]
name = "care-effectors"
version = "0.2.0"
edition = "2021"
description = "Common helper code for effectors for the care tool"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
urlencoding = { workspace = true }
