[package]
name = "x-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env", "wrap_help"] }
fn-error-context = "0.2.1"
remotefs = { version = "0.3.0", default-features = false }
remotefs-ssh = { version = "0.4.1", default-features = false }
