[package]
name = "script"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
#assert_matches = "1.5.0" # TODO: replace with std when assert_matches stabilizes
log = { workspace = true }
parse_ncl = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
