[package]
name = "care-script"
version = "0.2.0"
edition = "2021"
description = "Input script processing crate for the care tool"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
parse_ncl = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }

[dev-dependencies]
assert_matches.workspace = true # TODO: replace with std when assert_matches stabilizes
