[package]
name = "care-ef-lua"
version = "0.2.0"
edition = "2021"
description = "Lua effector for the care tool"
license = "AGPL-3.0-or-later"
repository = "https://github.com/akavel/mana"

[dependencies]
anyhow = { workspace = true }
effectors = { workspace = true }
fn-error-context = { workspace = true }
mlua = { workspace = true, features = ["lua54", "vendored"] }
path-slash = { workspace = true }
