[package]
name = "care-ef-lua"
version = "0.2.0"
edition = "2021"
description = "Lua effector for the care tool"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
effectors = { workspace = true }
fn-error-context = { workspace = true }
mlua = { workspace = true, features = ["lua54", "vendored"] }
path-slash = { workspace = true }
