[package]
name = "f-scp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
effectors = { path = "..", version = "0.2.0", package = "care-effectors" }
fn-error-context = { workspace = true }
remotefs = { workspace = true }
remotefs-ssh = { workspace = true }
