[package]
name = "care-ef-scp"
version = "0.2.0"
edition = "2021"
description = "SCP effector for the care tool"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
effectors = { workspace = true }
fn-error-context = { workspace = true }
remotefs = { workspace = true }
remotefs-ssh = { workspace = true }
