[package]
name = "f-zeroinstall"
version = "0.1.0"
edition = "2021"

[dependencies]
effectors = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
path-slash = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
yaserde = { workspace = true, features = ["yaserde_derive"] }
xml-rs = { workspace = true }
