[package]
name = "care-ef-zeroinstall"
version = "0.2.0"
edition = "2021"
description = "0install effector for the care tool"
license.workspace = true
repository.workspace = true

[dependencies]
effectors = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
path-slash = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
yaserde = { workspace = true, features = ["yaserde_derive"] }
xml-rs = { workspace = true }
