[package]
name = "care-parse-ncl"
version = "0.2.0"
edition = "2021"
description = "Nickel script parsing crate for the care tool"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
nickel-lang-core = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
whoami = { workspace = true }

